Update docs, settings, tooling.

--- a/docs/locales/fr/LC_MESSAGES/index.po
+++ b/docs/locales/fr/LC_MESSAGES/index.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-30 20:29-0400\n"
+"POT-Creation-Date: 2025-08-31 01:28-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,5 +16,331 @@ msgid "MkDocs PO I18n"
 msgstr ""
 
 #: docs/en/index.md:3
-msgid "This is included for testing purposes."
+msgid ""
+"MkDocs PO I18n is a tool designed to build translations of MkDocs "
+"documentation. Generated PO template (POT) files, created from the primary "
+"language Markdown documentation files, are used to generate PO files for "
+"each specified langauge. The PO translation files are used to build the "
+"translated site for each language. This tool is compatible with using "
+"Weblate for the translation workflow, and Read the Docs for hosting the "
+"original and translated documentation."
+msgstr ""
+
+#: docs/en/index.md:5
+msgid "Installation"
+msgstr ""
+
+#: docs/en/index.md:7
+msgid ""
+"MkDocs PO I18n is currently installable directly from GitHub. The following "
+"can be added to a `requirements.txt` file or a `pyproject.toml` file, where "
+"`desiredhash` is the commit hash you wish to install:"
+msgstr ""
+
+#: docs/en/index.md:13
+msgid ""
+"Note: Always pin to a commit hash when installing a package directly from "
+"GitHub. Doing so serves the same purpose as pinning a package to a specific "
+"release; in the event that the API changes or a bug is introduced, you won't "
+"be caught by surprise when your workflow breaks."
+msgstr ""
+
+#: docs/en/index.md:15
+msgid "Required prerequisites"
+msgstr ""
+
+#: docs/en/index.md:17
+msgid "The following setup is required by MkDocs PO I18n."
+msgstr ""
+
+#: docs/en/index.md:19
+msgid "MkDocs configuration files"
+msgstr ""
+
+#: docs/en/index.md:21
+msgid ""
+"This tool is designed to work with a specific MkDocs configuration setup."
+msgstr ""
+
+#: docs/en/index.md:23
+msgid ""
+"You will create an `mkdocs.language-code.yml` file for the primary language "
+"and each language for which you intend to provide translations; this "
+"configuration is required for Read the Docs to build successfully. The "
+"settings contained in this file should be only options that are language-"
+"specific."
+msgstr ""
+
+#: docs/en/index.md:25
+msgid ""
+"You will also create a base configuration file called `config.yml` that "
+"contains all configuration shared by all languages; this allows you to apply "
+"further options to all builds without duplicating information."
+msgstr ""
+
+#: docs/en/index.md:27
+msgid "The `mkdocs.en.yml` for this repo contains the following:"
+msgstr ""
+
+#: docs/en/index.md:39
+msgid ""
+"The demo translation in this repo is French. The associated `mkdocs.fr.yml` "
+"file contains:"
+msgstr ""
+
+#: docs/en/index.md:51
+msgid ""
+"Additional content in the `config.yml` file is only necessary if you intend "
+"to add further configuration to your MkDocs setup. Any options added to it "
+"will apply to both. This tool expects `config.yml` to exist, so even if you "
+"don't intend to add any other options at this time, you need to generate an "
+"empty file."
+msgstr ""
+
+#: docs/en/index.md:53
+msgid ""
+"The `config.yml` for this repo would minimally require the following, as the "
+"Material theme language is specified in the `mkdocs.language.yml` files:"
+msgstr ""
+
+#: docs/en/index.md:60
+msgid "Documentation directory structure"
+msgstr ""
+
+#: docs/en/index.md:62
+msgid ""
+"MkDocs PO I18n expects the Markdown documentation to be maintained in a `/"
+"docs/language-code/` subdirectory, where `language-code` is the primary "
+"documentation langauge code. The primary langauge for this documentation is "
+"English, so this Markdown content is in `/docs/en/`."
+msgstr ""
+
+#: docs/en/index.md:64
+msgid "PO file, POT file, and locales directory structure"
+msgstr ""
+
+#: docs/en/index.md:66
+msgid "The `locales/` directory is expected to be in the `/docs/` directory."
+msgstr ""
+
+#: docs/en/index.md:68
+msgid ""
+"The POT files should reside in the `/docs/locales/templates/` directory."
+msgstr ""
+
+#: docs/en/index.md:70
+msgid ""
+"The PO files for each language should reside in a `/docs/locales/"
+"language-code/LC_MESSAGES/` directory. The demo translation language for "
+"this documentation is French. The French PO files are in `/docs/locales/fr/"
+"LC_MESSAGES/`."
+msgstr ""
+
+#: docs/en/index.md:72
+msgid ""
+"/// warning | Create new language code directories in `locales` before "
+"attempting to create PO files!"
+msgstr ""
+
+#: docs/en/index.md:74
+msgid ""
+"To avoid unnecessary incorrect directories being created if an invalid "
+"language code is provided in error, the method MkDocs PO I18n uses to verify "
+"if the provided language code is an existing language checks for the "
+"existence of the language code directory in the `/docs/locales/` directory. "
+"If the language code directory doesn't exist, the tool will fail to run with "
+"an error. Therefore, you must create the desired language code directories "
+"manually before running the translation tools."
+msgstr ""
+
+#: docs/en/index.md:76
+msgid "///"
+msgstr ""
+
+#: docs/en/index.md:78
+msgid "Recommended prerequisites"
+msgstr ""
+
+#: docs/en/index.md:80
+msgid ""
+"It is highly recommended to use `tox` for managing usage of this tool. It is "
+"not required, however, it creates a consistent environment locally and on "
+"Read the Docs, which makes troubleshooting issues much more straightforward."
+msgstr ""
+
+#: docs/en/index.md:82
+msgid "`tox` configuration"
+msgstr ""
+
+#: docs/en/index.md:84
+msgid ""
+"The following is an example `tox.ini`, similar to the one found in this "
+"repo. It accounts for English as a primary language, and French as the only "
+"available translation. You will need to make changes to it for a different "
+"setup."
+msgstr ""
+
+#: docs/en/index.md:109
+msgid ""
+"The highlighted lines above are where a different configuration would "
+"require changes."
+msgstr ""
+
+#: docs/en/index.md:111
+msgid ""
+"If you are not using `pyproject.toml` with a `dev` dependency group that "
+"contains at least `tox`, lines 11-12 will need to be updated to reflect your "
+"configuration."
+msgstr ""
+
+#: docs/en/index.md:113
+msgid ""
+"If your primary and translated languages are not the same, the following "
+"changes will be needed. Line 17 requires a language code if your primary "
+"language is not English. Lines 8, 14, 16, and 18-20 are all language-"
+"specific; if you add a language, you will need to update 8, 14, and 16, and "
+"include an additional line at the end, similar to 19 and 20, with the new "
+"language code."
+msgstr ""
+
+#: docs/en/index.md:115
+msgid "Optional Prerequisites"
+msgstr ""
+
+#: docs/en/index.md:117
+msgid ""
+"The following is required if you intend to use Read the Docs to host your "
+"documentation site."
+msgstr ""
+
+#: docs/en/index.md:119
+msgid "Read the Docs configuration"
+msgstr ""
+
+#: docs/en/index.md:121
+msgid ""
+"Read the Docs requires [a `.readthedocs.yaml` configuration file]{1} be "
+"present in your repo. If you are using `tox` and `pyproject.toml` with "
+"dependency groups, your `.readthedocs.yaml` file should contain the "
+"following:"
+msgstr ""
+
+#: docs/en/index.md:139
+msgid ""
+"If you are using `requirements.txt`, you will need to update line 10 to `- "
+"python -m pip install -r requirements.txt`."
+msgstr ""
+
+#: docs/en/index.md:141
+msgid ""
+"If you are not using `tox`, you will need to update line 13 to `- python -m "
+"build_md_translations $READTHEDOCS_LANGUAGE -- --output=$READTHEDOCS_OUTPUT/"
+"html/`."
+msgstr ""
+
+#: docs/en/index.md:143
+msgid "Read the Docs primary and translation project creation and set up"
+msgstr ""
+
+#: docs/en/index.md:145
+msgid ""
+"[Create the primary Read the Docs project]{1} for your repo. If you have "
+"already added the `.readthedocs.yml`, connecting a RTD project can be done "
+"automatically. This will act as the \"parent project\"."
+msgstr ""
+
+#: docs/en/index.md:147
+msgid ""
+"To add a translation project, navigate back to the Projects dashboard and "
+"click \"+ Add project\". Search for the repo you added as the primary "
+"project, and choose it. RTD will tell you that it's already been configured, "
+"but click \"Continue\" and it will still take you to the configuration page. "
+"Update the \"Name\"; adding `-language-code` is the simplest way to handle "
+"it, i.e. for French, update `project-name` to `project-name-fr`. Below that, "
+"there is a dropdown for \"Language\"; choose the associated language from "
+"this menu. Clicking \"Next\" will create the project."
+msgstr ""
+
+#: docs/en/index.md:149
+msgid ""
+"To associate the translation project with the parent project, click on the "
+"parent project in the dashboard, and navigate to Settings > Translations. "
+"Click \"+ Add translation\", choose the translation project from the "
+"dropdown, and click \"Save\"."
+msgstr ""
+
+#: docs/en/index.md:151
+msgid "Recommended usage"
+msgstr ""
+
+#: docs/en/index.md:153
+msgid ""
+"The following commands assume you have set up your [`tox.ini` configuration]"
+"{1} as shown above."
+msgstr ""
+
+#: docs/en/index.md:155
+#: docs/en/index.md:199
+msgid "To do a local build of the site in English, run the following:"
+msgstr ""
+
+#: docs/en/index.md:161
+msgid "You can also run:"
+msgstr ""
+
+#: docs/en/index.md:167
+#: docs/en/index.md:205
+msgid "To live serve the build of your site in English, run the following:"
+msgstr ""
+
+#: docs/en/index.md:173
+#: docs/en/index.md:211
+msgid ""
+"If your primary language is not English, you need to add a language code. "
+"For example, to live serve the site with German as your primary langauge, "
+"run the following:"
+msgstr ""
+
+#: docs/en/index.md:179
+msgid ""
+"The first step towards translating content is to generate the PO template "
+"files, followed by generating the desired language PO files. To invoke this "
+"process, run the following:"
+msgstr ""
+
+#: docs/en/index.md:185
+msgid ""
+"To build the site in a language other than your primary language, you'll run "
+"the language-specific command, by including the language code. For example, "
+"to build in French, run the following:"
+msgstr ""
+
+#: docs/en/index.md:191
+msgid ""
+"To build in all available languages, including your primary language, run "
+"the following:"
+msgstr ""
+
+#: docs/en/index.md:197
+msgid "Direct Usage"
+msgstr ""
+
+#: docs/en/index.md:217
+msgid ""
+"The first step towards translating content is to generate the PO template "
+"files. To generate the POT files, run the following:"
+msgstr ""
+
+#: docs/en/index.md:223
+msgid ""
+"The next step is generating the desired language PO files. You can run this "
+"command with one or more language codes. For example, to generate the PO "
+"files for French, run the following:"
+msgstr ""
+
+#: docs/en/index.md:229
+msgid ""
+"To build the site locally with translated content, you can run this command "
+"with one or more language codes. For example, to build in French, run the "
+"following:"
 msgstr ""
